<resources>
    <string name="app_name">chatApplication</string>
    <string name="text_button_newAccount">Crear cuenta nueva</string>
    <string name="text_button_logIn">Ingresar</string>
    <string name="text_change_photo">Cambiar Foto de Perfil</string>
    <string name="text_name">Nombre completo</string>
    <string name="text_email">Correo Electrónico</string>
    <string name="text_genre_man">Hombre</string>
    <string name="text_genre_woman">Mujer</string>
    <string name="text_new_password">Ingrese su contraseña nueva</string>
    <string name="text_button_create_new_user">Crear Nuevo Usuario</string>
</resources>
